# langgraph-agent-management

./: .env.example  .gitignore  .pre-commit-config.yaml  AGGRESSIVE_CLEANUP_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  EXTREME_QUALITY_SETUP.md  FINAL_OPTIMIZATION_REPORT.md  INTEGRATION_TEST_COVERAGE.md  LANGGRAPH_MIGRATION_PLAN.md  LICENSE  LLM_INTEGRATION_TEST_RESULTS.md  MIGRATION_PREPARATION_CHECKLIST.md  MIGRATION_SUCCESS_REPORT.md  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  README.md  SESSION_NOTES.md  TASKMASTER_STATUS.md  TASK_6_ANALYSIS.md  TASK_6_IMPLEMENTATION_STRATEGY.md  TASK_6_MIGRATION_PLAN.md  TASK_6_PROJECT_STATUS.md  TOMORROW_MIGRATION_READY.md  bandit_report.json  deploy-aws.md  lambda_handler.py  migrate_to_langgraph.py  package-lock.json  package.json  pyproject.toml  requirements-lambda.txt  requirements.txt  run_server.py  serverless.yml  simple_llm_demo.py  test_langgraph_simplification.py  test_llm_integration.py  test_runner.py  test_task_service.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: quality-improvement.md
.github/workflows/: deploy-production.yml  pr-quality-check.yml  quality-gate.yml
.taskmaster/: state.json
.taskmaster/status/: project_status_2025-07-15_19-45-56.txt  project_status_2025-07-16_20-22-39.txt  project_status_2025-07-16_21-35-18.txt  project_status_2025-07-16_21-38-36.txt
.taskmaster/tasks/: tasks.json
.taskmaster/templates/: analysis_report.txt  example_prd.txt
app/: __init__.py  main.py
app/api/: __init__.py  langgraph_routes.py  routes.py
app/models/: __init__.py  schemas.py
app/services/: agent_service.py  langgraph_service.py  llm_service.py  persistence_service.py  task_service.py  workflow_service.py
app/services/legacy/: __init__.py  agent_service.py  llm_service.py  persistence_service.py  task_service.py  workflow_service.py
app/utils/: __init__.py  config.py  errors.py  helpers.py  logger.py
migration_backup/: requirements.txt
migration_backup/app/: main.py
migration_backup/app/api/: routes.py
migration_backup/app/services/: __init__.py  agent_service.py
migration_backup/app/services/legacy/: langgraph_service.py  llm_service.py  persistence_service.py  task_service.py  workflow_service.py
migration_backup/tests/: __init__.py  test_agent.py  test_langgraph_migration.py  test_main.py  test_task_service.py  test_workflow.py
src/: __init__.py  main.py
tests/: __init__.py  test_agent.py  test_agent_connections.py  test_agent_status_tracking.py  test_integration.py  test_langgraph_migration.py  test_main.py  test_persistence_service.py  test_task_integration.py  test_task_service.py  test_workflow.py
